Fix z-index of background playing havoc on phones

--- a/css/ajk.css
+++ b/css/ajk.css
@@ -47,7 +47,7 @@ p {
 }
 
 #bg {
-	z-index: 50;
+	z-index: -1;
 	position: fixed;
 	top:0;
 	left:0;
